# crust

./: .gitignore  .gitpod.yml  .rusty-hook.toml  CODE_OF_CONDUCT.md  Cargo.toml  Dockerfile  README.md  docs.md  recipe.json
.github/workflows/: rust.yml
src/: main.rs  test.rs
