bench = []
test = []
example = []

[[bin]]
path = "src/main.rs"
name = "crust"
test = true
doctest = true
bench = true
doc = true
plugin = false
proc-macro = false
harness = true
edition = "2021"
required-features = []

[package]
name = "crust"
edition = "2021"
version = "0.0.1"
authors = ["thrizzle. <thrizzle@terabyteis.me>"]
keywords = []
categories = []
autobins = true
autoexamples = true
autotests = true
autobenches = true
publish = true

[dependencies]
actix-files = "0.6.0-beta.16"
actix-web = "4.0.0-rc.2"
cached = "0.30.0"
env_logger = "0.9.0"
miniserde = "0.1.20"
uuid = {version="0.8.2", features=["v4"]}
async-minecraft-ping = "0.8.0"
fastping-rs = "0.2.3"

[dependencies.reqwest]
version = "0.11"
features = []
optional = false

[dev-dependencies]
rusty-hook = "^0.11.2"

[features]
