[package]
name = "crust"
edition = "2021"
version = "0.0.1"
authors = ["thrizzle. <thrizzle@terabyteis.me>"]
keywords = []
categories = []

[dependencies]
actix-web = "4.0.0-rc.2"
cached = "0.30.0"
env_logger = "0.9.0"
miniserde = "0.1.20"
uuid = {version="0.8.2", features=["v4"]}

[dependencies.reqwest]
version = "0.11"
features = []
optional = false

[features]
